--- a/src/app.html
+++ b/src/app.html
@@ -1,12 +1,13 @@
 <!doctype html>
-<html lang="en">
+<html class="dark" lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+		<link rel="stylesheet" href="/assets/styles/main.css"/>
 	</head>
-	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">%sveltekit.body%</div>
+	<body class="bg-gray-800 dark:bg-gray-800">
+		<div class="content" style="display: contents">%sveltekit.body%</div>
 	</body>
-</html>
+	</html>
